Trivia Game Added

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -164,7 +164,7 @@ body {
                 .folio3 {
                     position: absolute;
                     display: inline-block;
-                    background-image: url("../images/gardening.jpg");
+                    background-image: url("../images/sakura.png");
                     background-size: contain;
                     top: 34.5%;
                     left: 0;
