Assignment 6 added to Portfolio Page.

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -174,7 +174,7 @@ body {
                 .folio4 {
                     position: absolute;
                     display: inline-block;
-                    background-image: url("../images/fitness.jpg");
+                    background-image: url("../images/paws_n_bones.jpg");
                     background-size: contain;
                     top: 34.5%;
                     right: 0;
