Team 1 project added

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -144,7 +144,7 @@ body {
                 .folio1 {
                     position: absolute;
                     display: inline-block;
-                    background-image: url("../images/science.jpg");
+                    background-image: url("../images/jukebox.jpg");
                     background-size: contain;
                     top: 0;
                     left: 0;
