--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -190,10 +190,18 @@ body {
                     left: 0;
                     z-index: 5;
                     }
+                    
+                .folio6 {
+                    position: absolute;
+                    display: inline-block;
+                    background-image: url("../images/Liribot.jpg");
+                    background-size: contain;
+                    bottom:10px;
+                    right: 0;
+                    z-index: 6;
+                    }   
 
-                #crystal-game, #trivia-game, #ajax, #firebase {
-                    color: #ffffff;
-                }
+        
                 
 
                
