--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -219,8 +219,17 @@ body {
                     top: 60%;
                     right: 0;
                     z-index: 8;
-                    }   
+                    }  
 
+                    .folio9 {
+                        position: absolute;
+                        display: inline-block;
+                        background-image: url("../images/burger.jpeg");
+                        background-size: contain;
+                        top: 80%;
+                        left: 0;
+                        z-index: 8;
+                        } 
         
                 
 
